[gd_scene load_steps=19 format=3 uid="uid://ciwg32p5fu0jx"]

[ext_resource type="Script" uid="uid://banc2f1p3qdjs" path="res://Base Objects/input_processor.gd" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://cjnkgonktgaqj" path="res://Base Objects/global_executor_list.gd" id="1_lquwl"]
[ext_resource type="Script" uid="uid://kph3r40uvxi1" path="res://telemetry_collector.gd" id="1_qhdym"]
[ext_resource type="Script" uid="uid://n12cdne363o8" path="res://Base Objects/level_loader.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bsibegt71rbqt" path="res://Game Logic/Scenes/Play Spaces/two_players.tscn" id="4_lk2sk"]
[ext_resource type="PackedScene" uid="uid://l4qt2sjtnb42" path="res://Game Logic/Scenes/Play Spaces/four_players.tscn" id="5_6hafu"]
[ext_resource type="PackedScene" uid="uid://c2awiqacmo8ob" path="res://Game Logic/Scenes/Play Spaces/six_players.tscn" id="6_5ocdf"]
[ext_resource type="PackedScene" uid="uid://muys6dk2o42v" path="res://Game Logic/Scenes/menu.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://yeff35x84jws" path="res://Game Logic/Scenes/gameover.tscn" id="8_6hafu"]
[ext_resource type="PackedScene" uid="uid://pmy5107y2im8" path="res://Debug/debug_menu.tscn" id="9_5ocdf"]
[ext_resource type="PackedScene" uid="uid://ctdl3owxk7iub" path="res://Behaviors/slide_left_in_UI.tscn" id="10_p621v"]
[ext_resource type="PackedScene" uid="uid://b0oyb50t3p2y0" path="res://Behaviors/slide_right_in_UI.tscn" id="11_ckpcq"]
[ext_resource type="PackedScene" uid="uid://dlrxu6nmrti6c" path="res://Behaviors/slide_left_out_UI.tscn" id="11_mnogh"]
[ext_resource type="PackedScene" uid="uid://bmkdhxlmf418i" path="res://Behaviors/fade_in_UI.tscn" id="12_lague"]
[ext_resource type="PackedScene" uid="uid://dbgxijvcag54g" path="res://Behaviors/shrink_in_UI.tscn" id="13_eaxr7"]
[ext_resource type="PackedScene" uid="uid://bqb8wrc8jlbv6" path="res://Behaviors/slide_right_out.tscn" id="15_lppnm"]
[ext_resource type="PackedScene" uid="uid://drs4ygnjbtxx" path="res://Behaviors/fade_out_UI.tscn" id="16_57gqk"]
[ext_resource type="PackedScene" uid="uid://blgcy6uwfsbpt" path="res://Behaviors/shrink_out_UI.tscn" id="17_rs4dn"]

[node name="Root" type="Node2D"]

[node name="TelemetryCollector" type="Node" parent="."]
script = ExtResource("1_qhdym")
metadata/_custom_type_script = "uid://kph3r40uvxi1"

[node name="InputProcessor" type="Node" parent="."]
script = ExtResource("1_1bvp3")
metadata/_custom_type_script = "uid://banc2f1p3qdjs"

[node name="GlobalExecutorList" type="Node" parent="."]
script = ExtResource("1_lquwl")
metadata/_custom_type_script = "uid://cjnkgonktgaqj"

[node name="LevelLoader" type="Node" parent="."]
script = ExtResource("3_h2yge")
level_scenes = Array[PackedScene]([ExtResource("4_lk2sk"), ExtResource("5_6hafu"), ExtResource("6_5ocdf")])
main_menu = ExtResource("6_7mycd")
game_over = ExtResource("8_6hafu")
transitions_in = Array[PackedScene]([ExtResource("10_p621v"), ExtResource("11_ckpcq"), ExtResource("12_lague"), ExtResource("13_eaxr7")])
transitions_out = Array[PackedScene]([ExtResource("11_mnogh"), ExtResource("15_lppnm"), ExtResource("16_57gqk"), ExtResource("17_rs4dn")])
metadata/_custom_type_script = "uid://n12cdne363o8"

[node name="DebugMenu" parent="." instance=ExtResource("9_5ocdf")]
